Add website creation

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -36,7 +36,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/dependencies/bootstrap-4.css">
+    <link rel="stylesheet" href="/dependencies/bootstrap/bootstrap-4.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -128,6 +128,7 @@
 
     <!--SCRIPTS-->
     <script src="/dependencies/sails.io.js"></script>
+    <script src="/js/website.new.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
