--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -1,17 +1,21 @@
 <div id="login-view" class="container">
     <form action="login" method="POST">
-	   <h1 class="text-center display-4">Login</h1>
+        <div class="row">
+            <div class="col-auto" style="margin: 0 auto;">
+        	   <h1 class="display-4">Login</h1>
 
-        <div class="form-group">
-    	   <label>Email address</label>
-            <input class="form-control" type="text" name="email" placeholder="Email Address" required/>
+                <div class="form-group">
+            	   <label>Email address</label>
+                    <input class="form-control" type="text" name="email" placeholder="Email Address" required/>
+                </div>
+
+                <div class="form-group">
+                    <label>Password</label>
+                    <input class="form-control" type="password" name="password" placeholder="Password" required/>
+                </div>
+
+                <button class="btn btn-warning" type="submit">Submit</button>
+            </div>
         </div>
-
-        <div class="form-group">
-            <label>Password</label>
-            <input class="form-control" type="password" name="password" placeholder="Password" required/>
-        </div>
-
-        <button class="btn btn-warning" type="submit">Submit</button>
     </form>
 </div>
