--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -12,7 +12,7 @@
 
 	<hr />
 
-	<h4>My Users</h4>
+	<h4>My users</h4>
 
 	<div class="row">
 
@@ -32,7 +32,7 @@
 						<p>
 							<%= users[i].email %>
 						</p>
-						<a href="/users/<%= users[i].id %>" class="btn btn-primary">See profile</a>
+						
 					</div>
 				</div>
 			</div>
@@ -47,14 +47,53 @@
 
 	<hr />
 
-	<h4>My Websites</h4>
+	<h4>My websites</h4>
 
-	<% if (websites.length === 0) { %>
-		<div class="col">
-			<p class="text-secondary">You have no websites to take care of</p>
+	<div class="row">
+		<% for (var i in websites) { %>
+			<div class="col-md-3">
+				<div class="card mb-4">
+					<div class="card-body">
+						<h5 class="card-title">
+							<%= websites[i].domain %>
+						</h5>
+						<p><%= websites[i].state %></p>
+						<a href="/websites/<%=websites[i].id%>" class="btn btn-primary">Details</a>
+					</div>
+				</div>
+			</div>
+		<% } %>
+
+		<% if (websites.length === 0) { %>
+			<div class="col">
+				<p class="text-secondary">You have no websites to take care of</p>
+			</div>
+		<% } %>
+	</div>
+
+
+	<hr />
+
+	<h4>Get website</h4>
+
+	<form action="#" method="GET">
+		<div class="form-row">
+			<div class="col">
+				<div class="form-group">
+					<input class="form-control" type="text" name="page-url" placeholder="Website URL" />
+				</div>
+			</div>
+			<div class="col-auto">
+				<div class="form-group">
+					<button class="btn btn-dark" type="submit">Get</button>
+				</div>
+			</div>
 		</div>
-	<% } %>
+		
+	</form>
 	
-	<a href="/users/new" class="btn btn-warning">Add new user</a>
+	<a href="/users/new" class="btn btn-primary">Add new user</a>
+	<a href="/websites/new" class="btn btn-info">Create website</a>
+	<a href="/websites/edit" class="btn btn-warning">Update website</a>
 
 </div>
