--- a/business.data.form
+++ b/business.data.form
@@ -14,15 +14,15 @@ relevant-information-column-2-title: "Pizza"
 relevant-information-column-2-text: "OMG!"
 
 home-card-title: "Secure delivery"
-home-card-image-url: "https://placeholder.com/150"
+home-card-image-url: "https://assets.hardwarezone.com/img/2019/06/food-delivery.jpg"
 home-card-text: "Our guys are the best in town"
 
 home-card-title: "100% refund for cold pizza"
-home-card-image-url: "https://placeholder.com/150"
+home-card-image-url: "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQQS4_aMUimxhsJzcviEf_gY2FMxm1l6iVGNePZtzUE_kSdKiWH"
 home-card-text: "You heard it right"
 
 home-card-title: "Realtime tracking of the delivery"
-home-card-image-url: "https://placeholder.com/150"
+home-card-image-url: "https://img.freepik.com/vector-gratis/ubicacion_53876-25530.jpg?size=338&ext=jpg"
 home-card-text: "Use our custom GPS based application"
 
 # contact view
