--- a/views/pages/user/new.ejs
+++ b/views/pages/user/new.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="display-4 mb-4">Add a new user</h1>
+    <h1 class="display-4 mb-4">Add a new account</h1>
 
     <form action="/users/create" method="POST">
 
