--- a/views/pages/user/show.ejs
+++ b/views/pages/user/show.ejs
@@ -3,6 +3,11 @@
 		<%= user.name %>
 		
 	</h1>
+
+	<a class="btn btn-warning mb-2" href="/websites/edit">
+		Request update
+	</a>
+
 	<h4 class="mb-4">
 		<%= user.email %>
 		<% if(user.isAdmin) { %> 
