--- a/views/pages/website/edit.ejs
+++ b/views/pages/website/edit.ejs
@@ -1,7 +1,7 @@
 <div class="container">
-	<h1 class="display-4 mb-4">Edit a website</h1>
+	<h1 class="display-4 mb-4">Update a website</h1>
 
-	<form action="/websites/create" method="POST" id="create-website-form">
+	<form action="/requests/create" method="POST" id="create-website-form">
 
         <div class="form-group">
             <label for="name">Domain</label>
@@ -13,7 +13,7 @@
 		    <input type="file" class="form-control-file" id="format" required>
 		</div>
 
-        <button class="btn btn-warning" type="submit">Update</button>
+        <button class="btn btn-warning" type="submit">Send request</button>
 
 	</form>
 
