--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -40,8 +40,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/dependencies/bootstrap/bootstrap-4.css">
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -135,8 +134,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
